--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 body {
 	background: #F3EBE9;
 	font-size: 100%;
-	font-family: 'Times New Roman', serif; 
+	font-family: 'Times New Roman', serif;
 }
 
 .wrapper {
@@ -15,6 +15,22 @@ body {
 	margin: 0 auto;
 	background: #fff;
 	padding: 0 45px 20px;
+}
+h1 {
+	color: rgb(152,173,166);
+	font-size: 5em;
+	font-weight: normal;
+}
+h2 {
+	color: #555;
+}
+#copyright {
+	text-align: right;
+	font-size: 1em;
+	color: #555;
+}
+#featured {
+	border: 5px rgb(152,173,166) solid;
 }
 
 /* Write all remaining styles here */
